Refatorando a factory toda de testes para ficar concentrado num pacote só